Cambiar la ruta SingUp.html por SingUp.jsp en todos los jsp

--- a/src/java/Internalizacion/messages.properties
+++ b/src/java/Internalizacion/messages.properties
@@ -1,8 +1,35 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
-user=User
+userName=UserName
 login=Login
 logout=Logout
 RememberPassword=Remember password
 password=Password
+errorContrase\u00f1a=ErrorContrase\u00f1a
+nombre=nombre
+newImage=newImage
+upDateProfile=upDateProfile
+home=home
+editProfile=editProfile
+adminArea=adminArea
+welcome=welcome
+lastName=lastName
+newPost=newPost
+PostList=PostList
+Show\ map=Show map
+Title=Title
+Latitude=Latitude
+Longitude=Longitude
+Content=Content
+ningunArchSeleccionado=ningunArchSeleccionado
+EditUsers=EditUsers
+DeletePost=DeletePost
+DeleteComment=DeleteComment
+FilterBy=FilterBy
+FromUser=FromUser
+search=search
+findComment=findComment
+findPost=findPost
+addComment=addComment
+error1=error1
