--- a/src/java/Internalizacion/messages_en_US.properties
+++ b/src/java/Internalizacion/messages_en_US.properties
@@ -1,6 +1,33 @@
 
-user=User
+userName=User name
 login=Login
 logout=Logout
 RememberPassword=Remember password
 password=Password
+nombre=First name
+newImage=Select new image 
+upDateProfile=Up date profile
+home=Home
+editProfile=Edit profile
+adminArea=Admin area
+welcome=Welcome
+lastName=Last name
+newPost=New post
+PostList=Post list
+Title=Title
+Latitude=Latitude
+Longitude=Longitude
+Content=Content
+ningunArchSeleccionado=No file is selected
+errorContrase\u00f1a=Warning password
+EditUsers=Edit users
+DeletePost=Delete post
+DeleteComment=Delete comment
+FilterBy=Filter by
+FromUser=From user
+search=Search
+findComment=Find comments
+findPost=Find post
+Show\ map=Show comment
+addComment=Add comment
+error1=This username has already been used
