--- a/src/java/Internalizacion/messages_es.properties
+++ b/src/java/Internalizacion/messages_es.properties
@@ -1,6 +1,33 @@
 
-user=Usuario
+userName=nombre usuario
 login=Iniciar sesi\u00f3n
 logout=Cerrar sesi\u00f3n
-RememberPassword=Recordar Contrase\u00f1a
+RememberPassword=Recordar contrase\u00f1a
 password=Contrase\u00f1a
+nombre=Nombre
+newImage=Seleccionar nueva imagen
+upDateProfile=Actualizar perfil
+home=Inicio
+editProfile=Modificar perfil
+adminArea=Zona de admin
+welcome=Bienvenido
+lastName=Apellido
+newPost=Nuevo post
+PostList=Lista post
+Show\ map=Ver mapa
+Title=Titulo
+Latitude=Latitud
+Longitude=Longitud
+Content=Contenido
+ningunArchSeleccionado=Ning\u00fan archivo seleccionado
+errorContrase\u00f1a=Error contrase\u00f1a
+EditUsers=Editar usuarios
+DeletePost=Eliminar post
+DeleteComment=Eliminar comentario
+FilterBy=Filtrar por 
+FromUser=Del usuario
+search=Busqueda
+findComment=Encontrar comentarios
+findPost=Encontrar post
+addComment=A\u00f1adir comentarios
+error1=Este usuario ya esta registrado
