--- a/src/java/Internalizacion/messages_fr_FR.properties
+++ b/src/java/Internalizacion/messages_fr_FR.properties
@@ -1,6 +1,33 @@
 
-user=Utilisateur
-login=S'identifier
+userName=Nom d'utilisateur
+login=Se connecter
 logout=D\u00e9connexion
-RememberPassword=Mot de pass oublier
-password=Mot de pass
+RememberPassword=Retenir le mot de passe
+password=Mot de passe
+errorContrase\u00f1a= Erreur Mot De Passe
+home= Initial
+welcome= Bienvenu
+adminArea= Zone d'admin
+upDateProfile= Mise \u00e0 Jour Du Profil
+editProfile= Modifier Profil
+newImage= S\u00e9lectionnez une Nouvelle Image
+nombre=Nom
+lastName=Pr\u00e9nom
+newPost=Nouvelle post
+PostList=Liste de post
+Title=Titre
+Latitude=Latitude
+Longitude=Longitude
+Content=Contenu
+ningunArchSeleccionado=Aucun fichier s\u00e9lectionn\u00e9
+EditUsers=Modifier l'utilisateures
+DeletePost=Supprimer post
+DeleteComment=Supprimer commentaire
+FilterBy=Filtr\u00e9 par
+FromUser=D'utilisateur
+search=Recherche
+findComment=Trouver commentaires
+findPost=Trouver post
+Show\ map=Affichez carte
+addComment=Ajouter des commentaires
+error1=Ce nom d'utilizateur est d\u00e9j\u00e0 utilis\u00e9
