--- a/src/java/Internalizacion/messages.properties
+++ b/src/java/Internalizacion/messages.properties
@@ -33,3 +33,7 @@ findComment=findComment
 findPost=findPost
 addComment=addComment
 error1=error1
+confirmPassword=confirmPassword
+signup=signup
+usersFound=usersFound
+Description=Description
