--- a/src/java/Internalizacion/messages_en_US.properties
+++ b/src/java/Internalizacion/messages_en_US.properties
@@ -31,3 +31,7 @@ findPost=Find post
 Show\ map=Show comment
 addComment=Add comment
 error1=This username has already been used
+confirmPassword=confirm password
+signup=Sign up
+usersFound=Users found
+Description=Description
