--- a/src/java/Internalizacion/messages_es.properties
+++ b/src/java/Internalizacion/messages_es.properties
@@ -31,3 +31,7 @@ findComment=Encontrar comentarios
 findPost=Encontrar post
 addComment=A\u00f1adir comentarios
 error1=Este usuario ya esta registrado
+confirmPassword=Confirmar contrase\u00f1a
+signup=Registrar
+usersFound=Encontrar usuario
+Description=Descripcion
