--- a/src/java/Internalizacion/messages_fr_FR.properties
+++ b/src/java/Internalizacion/messages_fr_FR.properties
@@ -31,3 +31,7 @@ findPost=Trouver post
 Show\ map=Affichez carte
 addComment=Ajouter des commentaires
 error1=Ce nom d'utilizateur est d\u00e9j\u00e0 utilis\u00e9
+confirmPassword=Confirmer mot de passe 
+signup=Se registrer
+usersFound=Trouver utilisateures
+Description=Description
