--- a/src/java/Internalizacion/messages.properties
+++ b/src/java/Internalizacion/messages.properties
@@ -37,3 +37,18 @@ confirmPassword=confirmPassword
 signup=signup
 usersFound=usersFound
 Description=Description
+selectMVPost=selectMVPost
+remember=remember
+MVPshowsonHOMEpage=MVPshowsonHOMEpage
+noUsersFound=noUsersFound
+performAction=performAction
+thisIsMe=thisIsMe
+noPostFound=noPostFound
+pleaseMakeSureUsernameIsValid=pleaseMakeSureUsernameIsValid
+noComentFound=noComentFound
+comentFound=comentFound
+invalidusername=nvalidusername
+postedby=postedby
+readallposts=readallposts
+blogpostsbydate=blogpostsbydate
+blogpostsbydatedescr=For your ease of use, you can find blog posts filtered by date
