--- a/src/java/Internalizacion/messages_fr_FR.properties
+++ b/src/java/Internalizacion/messages_fr_FR.properties
@@ -33,5 +33,20 @@ addComment=Ajouter des commentaires
 error1=Ce nom d'utilizateur est d\u00e9j\u00e0 utilis\u00e9
 confirmPassword=Confirmer mot de passe 
 signup=Se registrer
-usersFound=Trouver utilisateures
+usersFound=Utilisateur trouv\u00e9e
 Description=Description
+selectMVPost=Selectionez MV post
+remember=Retenir
+MVPshowsonHOMEpage=MVP aficher en HOME page
+noUsersFound=Aucun utilisateur trouver
+performAction=Executer l'action
+thisIsMe=C est moi
+noPostFound=Aucun post trouv\u00e9e
+pleaseMakeSureUsernameIsValid=S'il vous plait met le nom d'utilizateur valable
+noComentFound=Aucun Commentaire trouv\u00e9e
+comentFound=Commentaire trouv\u00e9e
+invalidusername=Nom d'utilizateur invalid
+postedby=Publi\u00e9e par 
+readallposts=Lire tous les posts
+blogpostsbydate=Blog posts par date
+blogpostsbydatedescr=Pour faciliter votre utilisation, vous pouvez trouver blog post filtrer par la date
