--- a/src/java/Internalizacion/messages.properties
+++ b/src/java/Internalizacion/messages.properties
@@ -52,3 +52,4 @@ postedby=postedby
 readallposts=readallposts
 blogpostsbydate=blogpostsbydate
 blogpostsbydatedescr=For your ease of use, you can find blog posts filtered by date
+selectimage=Select Image
