--- a/src/java/Internalizacion/messages_en_US.properties
+++ b/src/java/Internalizacion/messages_en_US.properties
@@ -50,3 +50,4 @@ postedby=Posted by
 readallposts=Read all posts
 blogpostsbydate=blog posts by date
 blogpostsbydatedescr=For your ease of use, you can find blog posts filtered by date
+selectimage=Select Image
