--- a/src/java/Internalizacion/messages_es.properties
+++ b/src/java/Internalizacion/messages_es.properties
@@ -35,6 +35,8 @@ confirmPassword=Confirmar contrase\u00f1a
 signup=Registrar
 usersFound=Usuario encontrado
 Description=Descripcion
+selectimage=Seleccione imagen
+
 selectMVPost=selecciona MV post
 remember=Recordar
 MVPshowsonHOMEpage=MVP ver en HOME pagina
