--- a/src/java/Internalizacion/messages_fr_FR.properties
+++ b/src/java/Internalizacion/messages_fr_FR.properties
@@ -35,7 +35,8 @@ confirmPassword=Confirmer mot de passe
 signup=Se registrer
 usersFound=Utilisateur trouv\u00e9e
 Description=Description
-selectMVPost=Selectionez MV post
+selectimage=Selectioner foto
+lectMVPost=Selectionez MV post
 remember=Retenir
 MVPshowsonHOMEpage=MVP aficher en HOME page
 noUsersFound=Aucun utilisateur trouver
@@ -50,3 +51,4 @@ postedby=Publi\u00e9e par
 readallposts=Lire tous les posts
 blogpostsbydate=Blog posts par date
 blogpostsbydatedescr=Pour faciliter votre utilisation, vous pouvez trouver blog post filtrer par la date
+selectMVPost=selectioner MVPost
