--- a/src/java/Internalizacion/messages_en_US.properties
+++ b/src/java/Internalizacion/messages_en_US.properties
@@ -51,3 +51,7 @@ readallposts=Read all posts
 blogpostsbydate=blog posts by date
 blogpostsbydatedescr=For your ease of use, you can find blog posts filtered by date
 selectimage=Select Image
+slectMVPost=Select MV post
+getOut=Get ouT
+YoureNotAnAdmin=You're not an admin
+Hello=Hello
