--- a/src/java/Internalizacion/messages_es.properties
+++ b/src/java/Internalizacion/messages_es.properties
@@ -35,7 +35,7 @@ confirmPassword=Confirmar contrase\u00f1a
 signup=Registrar
 usersFound=Usuario encontrado
 Description=Descripcion
-selectimage=Seleccione imagen
+selectimage=Seleccionar imagen
 
 selectMVPost=selecciona MV post
 remember=Recordar
@@ -52,3 +52,7 @@ postedby=Publicado por
 readallposts=Leer todos los posts
 blogpostsbydate=Blog posts por fecha
 blogpostsbydatedescr=Para facilitarle la utilidad, puede encontrar blog posts filtrado por fecha
+slectMVPost=Seleccionar MV post
+getOut=Sal de aqui
+YoureNotAnAdmin=No eres admin
+Hello=Hola
