--- a/src/java/Internalizacion/messages_fr_FR.properties
+++ b/src/java/Internalizacion/messages_fr_FR.properties
@@ -36,7 +36,7 @@ signup=Se registrer
 usersFound=Utilisateur trouv\u00e9e
 Description=Description
 selectimage=Selectioner foto
-lectMVPost=Selectionez MV post
+slectMVPost=Selectionez MV post
 remember=Retenir
 MVPshowsonHOMEpage=MVP aficher en HOME page
 noUsersFound=Aucun utilisateur trouver
@@ -52,3 +52,6 @@ readallposts=Lire tous les posts
 blogpostsbydate=Blog posts par date
 blogpostsbydatedescr=Pour faciliter votre utilisation, vous pouvez trouver blog post filtrer par la date
 selectMVPost=selectioner MVPost
+getOut=Sort d'ici
+YoureNotAnAdmin=Vous etes pas admin
+Hello=Salut
