--- a/src/java/Internalizacion/messages.properties
+++ b/src/java/Internalizacion/messages.properties
@@ -53,3 +53,7 @@ readallposts=readallposts
 blogpostsbydate=blogpostsbydate
 blogpostsbydatedescr=For your ease of use, you can find blog posts filtered by date
 selectimage=Select Image
+slectMVPost=Select MV Post
+getOut=Getout
+YoureNotAnAdmin=YoureNotAnAdmin
+Hello=Hello
