--- a/src/java/Internalizacion/messages.properties
+++ b/src/java/Internalizacion/messages.properties
@@ -58,3 +58,9 @@ getOut=Getout
 YoureNotAnAdmin=YoureNotAnAdmin
 Hello=Hello
 setadmin=setadmin
+Writer=Writer
+Registred=Registred
+setRegistred=setRgistred
+setWriter=SetWriter
+deleteUser=DeleteUser
+sreach=Sreach
