--- a/src/java/Internalizacion/messages_es.properties
+++ b/src/java/Internalizacion/messages_es.properties
@@ -56,4 +56,10 @@ slectMVPost=Seleccionar MV post
 getOut=Sal de aqui
 YoureNotAnAdmin=No eres admin
 Hello=Hola
-setadmin=
+setadmin=Eligir admin
+Writer=Escritor
+Registred=Registrado
+setRegistred=Elegir registrado
+setWriter=Eligir Escritor
+deleteUser=Eliminar Usuario
+sreach=Buscar
