--- a/src/java/Internalizacion/messages_fr_FR.properties
+++ b/src/java/Internalizacion/messages_fr_FR.properties
@@ -55,4 +55,10 @@ selectMVPost=selectioner MVPost
 getOut=Sort d'ici
 YoureNotAnAdmin=Vous etes pas admin
 Hello=Salut
-setadmin=setadmin
+setadmin=Seleccioner admin
+Writer=Ecrivain
+Registred=Registre
+setRegistred=Choisir Registre
+setWriter=Choisir Ecrivain
+deleteUser=Supprimer utilisateur
+sreach=Chercher
