--- a/src/java/Internalizacion/messages_en_US.properties
+++ b/src/java/Internalizacion/messages_en_US.properties
@@ -55,4 +55,10 @@ slectMVPost=Select MV post
 getOut=Get ouT
 YoureNotAnAdmin=You're not an admin
 Hello=Hello
-setadmin=setadmin
+setadmin=Set admin
+Writer=Writer
+Registred=Registred
+setRegistred=Set registred
+setWriter=Set writer
+deleteUser=
+sreach=Sreach
