--- a/src/java/Internalizacion/messages_es.properties
+++ b/src/java/Internalizacion/messages_es.properties
@@ -56,11 +56,11 @@ slectMVPost=Seleccionar MV post
 getOut=Sal de aqui
 YoureNotAnAdmin=No eres admin
 Hello=Hola
-setadmin=Eligir admin
+setadmin=Hacer admin
 Writer=Escritor
 Registred=Registrado
-setRegistred=Elegir registrado
-setWriter=Eligir Escritor
+setRegistred=Hacer registrado
+setWriter=Hacer Escritor
 deleteUser=Eliminar Usuario
 sreach=Buscar
 getPost=Sacar post
