--- a/src/java/Internalizacion/messages_fr_FR.properties
+++ b/src/java/Internalizacion/messages_fr_FR.properties
@@ -55,11 +55,11 @@ selectMVPost=selectioner MVPost
 getOut=Sort d'ici
 YoureNotAnAdmin=Vous etes pas admin
 Hello=Salut
-setadmin=Seleccioner admin
+setadmin=Faire admin
 Writer=Ecrivain
 Registred=Registre
-setRegistred=Choisir Registre
-setWriter=Choisir Ecrivain
+setRegistred=Faire Registre
+setWriter=Faire Ecrivain
 deleteUser=Supprimer utilisateur
 sreach=Chercher
 getPost=Obtenir
