--- a/src/java/Internalizacion/messages.properties
+++ b/src/java/Internalizacion/messages.properties
@@ -67,3 +67,11 @@ sreach=Sreach
 getPost=GetPost
 between=Between
 Comment=Comment
+makeMVPost=hacer MV Post
+userLevel=User level
+user=User
+postSuccessfully=postSuccessfully
+deleted=Deleted
+commentSuccessfully=Comment successfully
+postSuccessfullyDeleted=Post successfully deleted
+PostsuccessfullySetAs=Post successfully set as
