--- a/src/java/Internalizacion/messages_en_US.properties
+++ b/src/java/Internalizacion/messages_en_US.properties
@@ -60,8 +60,16 @@ Writer=Writer
 Registred=Registred
 setRegistred=Set registred
 setWriter=Set writer
-deleteUser=
+deleteUser=Delete user
 sreach=Sreach
 getPost=Get Post
 between=Between
 Comment=Comment
+makeMVPost=Make MV Post
+userLevel=User level
+user=User
+postSuccessfully=Post successfully 
+deleted=Deleted
+commentSuccessfully=Comment successfully
+postSuccessfullyDeleted=Post successfully deleted
+PostsuccessfullySetAs=Post successfully set as
