--- a/src/java/Internalizacion/messages_es.properties
+++ b/src/java/Internalizacion/messages_es.properties
@@ -66,3 +66,11 @@ sreach=Buscar
 getPost=Sacar post
 between=Entre
 Comment=Comentario
+makeMVPost=hacer MV Post
+userLevel=Tipo usuario
+user=Usuario
+postSuccessfully=Post con exito
+deleted=Borrado
+commentSuccessfully=Comentario con exito
+postSuccessfullyDeleted=Post borrado con exito
+PostsuccessfullySetAs=POST establecido con \u00e9xito como
