--- a/src/java/Internalizacion/messages_fr_FR.properties
+++ b/src/java/Internalizacion/messages_fr_FR.properties
@@ -65,3 +65,11 @@ sreach=Chercher
 getPost=Obtenir
 between=Entre
 Comment=Comantaire
+makeMVPost=Faire MV post
+userLevel=Type utilisateur
+user=Utilisateur
+postSuccessfully=Post avec succ\u00e8
+deleted=Suprrime
+commentSuccessfully=Comentaire avec succ\u00e8
+postSuccessfullyDeleted=Post suprrimer avec succ\u00e8
+PostsuccessfullySetAs=Post mis avec succ\u00e8
