--- a/src/java/Internalizacion/messages.properties
+++ b/src/java/Internalizacion/messages.properties
@@ -75,3 +75,5 @@ deleted=Deleted
 commentSuccessfully=Comment successfully
 postSuccessfullyDeleted=Post successfully deleted
 PostsuccessfullySetAs=Post successfully set as
+backToAdminPanel=Back to admin panel
+isNow=Is now
