--- a/src/java/Internalizacion/messages_es.properties
+++ b/src/java/Internalizacion/messages_es.properties
@@ -74,3 +74,5 @@ deleted=Borrado
 commentSuccessfully=Comentario con exito
 postSuccessfullyDeleted=Post borrado con exito
 PostsuccessfullySetAs=POST establecido con \u00e9xito como
+backToAdminPanel=Volver al panel de adminstracion
+isNow=Es ahora
