--- a/src/java/Internalizacion/messages_fr_FR.properties
+++ b/src/java/Internalizacion/messages_fr_FR.properties
@@ -73,3 +73,5 @@ deleted=Suprrime
 commentSuccessfully=Comentaire avec succ\u00e8
 postSuccessfullyDeleted=Post suprrimer avec succ\u00e8
 PostsuccessfullySetAs=Post mis avec succ\u00e8
+backToAdminPanel=Retour au panneau d'adminstration
+isNow=C'est maintenant
