--- a/src/java/Internalizacion/messages_en_US.properties
+++ b/src/java/Internalizacion/messages_en_US.properties
@@ -28,7 +28,7 @@ FromUser=From user
 search=Search
 findComment=Find comments
 findPost=Find post
-Show\ map=Show comment
+Showmap=Show comment
 addComment=Add comment
 error1=This username has already been used
 confirmPassword=confirm password
@@ -75,3 +75,5 @@ postSuccessfullyDeleted=Post successfully deleted
 PostsuccessfullySetAs=Post successfully set as
 backToAdminPanel=Back to admin panel
 isNow=Is now
+filter=Filter
+filterPost=Filter post
