--- a/src/java/Internalizacion/messages_es.properties
+++ b/src/java/Internalizacion/messages_es.properties
@@ -14,7 +14,7 @@ welcome=Bienvenido
 lastName=Apellido
 newPost=Nuevo post
 PostList=Lista post
-Show\ map=Ver mapa
+Showmap=Ver mapa
 Title=Titulo
 Latitude=Latitud
 Longitude=Longitud
@@ -76,3 +76,5 @@ postSuccessfullyDeleted=Post borrado con exito
 PostsuccessfullySetAs=POST establecido con \u00e9xito como
 backToAdminPanel=Volver al panel de adminstracion
 isNow=Es ahora
+filter=Filtrar
+filterPost=Filtrar post
