--- a/src/java/Internalizacion/messages.properties
+++ b/src/java/Internalizacion/messages.properties
@@ -17,7 +17,7 @@ welcome=welcome
 lastName=lastName
 newPost=newPost
 PostList=PostList
-Show\ map=Show map
+Showmap=Show map
 Title=Title
 Latitude=Latitude
 Longitude=Longitude
@@ -77,3 +77,5 @@ postSuccessfullyDeleted=Post successfully deleted
 PostsuccessfullySetAs=Post successfully set as
 backToAdminPanel=Back to admin panel
 isNow=Is now
+filter=Filter
+filterPost=Filter post
