--- a/src/java/Internalizacion/messages_fr_FR.properties
+++ b/src/java/Internalizacion/messages_fr_FR.properties
@@ -28,7 +28,7 @@ FromUser=D'utilisateur
 search=Recherche
 findComment=Trouver commentaires
 findPost=Trouver post
-Show\ map=Affichez carte
+Showmap=Affichez carte
 addComment=Ajouter des commentaires
 error1=Ce nom d'utilizateur est d\u00e9j\u00e0 utilis\u00e9
 confirmPassword=Confirmer mot de passe 
@@ -75,3 +75,5 @@ postSuccessfullyDeleted=Post suprrimer avec succ\u00e8
 PostsuccessfullySetAs=Post mis avec succ\u00e8
 backToAdminPanel=Retour au panneau d'adminstration
 isNow=C'est maintenant
+filter=Filtrer
+filterPost=Filtr\u00e9 post
