expresiones regulares para quitar no numericos en los input de los mapas

--- a/src/java/Internalizacion/messages.properties
+++ b/src/java/Internalizacion/messages.properties
@@ -1,76 +1,77 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
-userName=UserName
+
+userName=User name
 login=Login
 logout=Logout
 RememberPassword=Remember password
 password=Password
-errorContrase\u00f1a=ErrorContrase\u00f1a
-nombre=nombre
-newImage=newImage
-upDateProfile=upDateProfile
-home=home
-editProfile=editProfile
-adminArea=adminArea
-welcome=welcome
-lastName=lastName
-newPost=newPost
-PostList=PostList
-Showmap=Show map
+nombre=First name
+newImage=Select new image 
+upDateProfile=Up date profile
+home=Home
+editProfile=Edit profile
+adminArea=Admin area
+welcome=Welcome
+lastName=Last name
+newPost=New post
+PostList=Post list
 Title=Title
 Latitude=Latitude
 Longitude=Longitude
 Content=Content
-ningunArchSeleccionado=ningunArchSeleccionado
-EditUsers=EditUsers
-DeletePost=DeletePost
-DeleteComment=DeleteComment
-FilterBy=FilterBy
-FromUser=FromUser
-search=search
-findComment=findComment
-findPost=findPost
-addComment=addComment
-error1=error1
-confirmPassword=confirmPassword
-signup=signup
-usersFound=usersFound
+ningunArchSeleccionado=No file is selected
+errorContrase\u00f1a=Warning password
+EditUsers=Edit users
+DeletePost=Delete post
+DeleteComment=Delete comment
+FilterBy=Filter by
+FromUser=From user
+search=Search
+findComment=Find comments
+findPost=Find post
+Showmap=Show comment
+addComment=Add comment
+error1=This username has already been used
+confirmPassword=confirm password
+signup=Sign up
+usersFound=Users found
 Description=Description
-selectMVPost=selectMVPost
-remember=remember
-MVPshowsonHOMEpage=MVPshowsonHOMEpage
-noUsersFound=noUsersFound
-performAction=performAction
-thisIsMe=thisIsMe
-noPostFound=noPostFound
-pleaseMakeSureUsernameIsValid=pleaseMakeSureUsernameIsValid
-noComentFound=noComentFound
-comentFound=comentFound
-invalidusername=nvalidusername
-postedby=postedby
-readallposts=readallposts
-blogpostsbydate=blogpostsbydate
+selectMVPost=select MV Post
+remember=Remember
+MVPshowsonHOMEpage=MVP shows on HOME page
+noUsersFound=No users found
+performAction=Perform action
+thisIsMe=This is me
+noPostFound=No post found
+pleaseMakeSureUsernameIsValid=Please make sure user name is valid
+noComentFound=No coment found
+comentFound=Coment found
+invalidusername=Invalid user name
+postedby=Posted by
+readallposts=Read all posts
+blogpostsbydate=blog posts by date
 blogpostsbydatedescr=For your ease of use, you can find blog posts filtered by date
 selectimage=Select Image
-slectMVPost=Select MV Post
-getOut=Getout
-YoureNotAnAdmin=YoureNotAnAdmin
+slectMVPost=Select MV post
+getOut=Get ouT
+YoureNotAnAdmin=You're not an admin
 Hello=Hello
-setadmin=setadmin
+setadmin=Set admin
 Writer=Writer
 Registred=Registred
-setRegistred=setRgistred
-setWriter=SetWriter
-deleteUser=DeleteUser
+setRegistred=Set registred
+setWriter=Set writer
+deleteUser=Delete user
 sreach=Sreach
-getPost=GetPost
+getPost=Get Post
 between=Between
 Comment=Comment
-makeMVPost=hacer MV Post
+makeMVPost=Make MV Post
 userLevel=User level
 user=User
-postSuccessfully=postSuccessfully
+postSuccessfully=Post successfully 
 deleted=Deleted
 commentSuccessfully=Comment successfully
 postSuccessfullyDeleted=Post successfully deleted
