--- a/src/java/Internalizacion/messages.properties
+++ b/src/java/Internalizacion/messages.properties
@@ -31,7 +31,7 @@ FromUser=From user
 search=Search
 findComment=Find comments
 findPost=Find post
-Showmap=Show comment
+Showmap=Show map
 addComment=Add comment
 error1=This username has already been used
 confirmPassword=confirm password
